# meet-fyp

./: .gitignore  package.json  tailwind.config.js
backend/: config.py  main.py  requirements.txt  summarization.py  transcription.py
backend/routers/: minutes.py  ws.py
backend/services/: audio_service.py  websocket_manager.py
diagrams/: 1_system_architecture.mmd  2_audio_data_flow.mmd  3_minutes_generation.mmd  4_component_structure.mmd
scripts/: build_sidecar.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build_log.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  lib.rs  main.rs
src-tauri/src/audio/: audio_capture.rs  mod.rs  sidecar_manager.rs
src/components/: AIWidget.tsx  AudioMonitor.tsx  ChatInterface.tsx  MeetingHeader.tsx  Sidebar.tsx  SummaryPanel.tsx  TranscriptRail.tsx  TranscriptionDisplay.tsx
