[package]
name = "ai-meeting"
version = "0.1.0"
description = "AI Meeting Minutes"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_meeting"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Audio
cpal = "0.15"
byteorder = "1.5"
anyhow = "1.0"
